frontends/dark_chat/src/tui/panels/snapshots/dark_chat__tui__panels__chat_panel__tests__chat_panel_default.snap
---
source: frontends/dark_chat/src/tui/panels/chat_panel.rs
expression: output
---
┌Conversation──────────────────────────────────────────────────────────────────────┐
│Snapshot Session                                                                  │
│session:ses_123   ready                                                           │
│                                                                                  │
│┌Messages────────────────────────────────────────────────────────────────────────┐│
││No messages yet. Send a prompt to begin.                                        ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────┘│
│┌Composer────────────────────────────────────────────────────────────────────────┐│
││model:anthropic/claude-sonnet-4    agent:developer_senior                       ││
││ready    c  compose   enter  send                                               ││
││                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────┘
