frontends/dark_chat/src/tui/panels/snapshots/dark_chat__tui__panels__chat_panel__tests__chat_panel_model_selector_open.snap
---
source: frontends/dark_chat/src/tui/panels/chat_panel.rs
expression: output
---
┌Conversation──────────────────────────────────────────────────────────────────────┐
│Snapshot Session                                                                  │
│session:ses_123   ready                                                           │
│                                                                                  │
│┌Messages────────────────────────────────────────────────────────────────────────┐│
││No messages yet. Send a prompt to begin.                                        ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
││                                                                                ││
│┌ Model Picker ──────────────────────────────┐                                   ││
││▸ anthropic/claude-sonnet-4 anthropic active│                                   ││
││openai/gpt-5.3-codex openai                 │                                   ││
││FILTER █                                    │                                   ││
││enter select  tab raw  esc close            │───────────────────────────────────┘│
│└────────────────────────────────────────────┘───────────────────────────────────┐│
││model:anthropic/claude-sonnet-4    agent:developer_senior                       ││
││ready    c  compose   enter  send                                               ││
││                                                                                ││
│└────────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────────┘
